@@ -157,9 +157,9 @@ def startTracing(SelectedLibrary, Multiproc=False):
       Traced_Functions = [line.strip() for line in open(func_list.nodeValue)]
       Number_of_Traced_Functions = len(Traced_Functions)
 
-      if (Number_of_Traced_Functions > 0):
-        ### Install the tracing hook if there's functions to trace
-        sys.setprofile( pyEx_trace_hook )
+    if ((Number_of_Traced_Functions > 0) or (MultiprocessingEnabled)):
+      ### Install the tracing hook if there's functions to trace
+      sys.setprofile( pyEx_trace_hook )
 
   ### Register the exit handler for the parent process
   atexit.register(pyEx_fini, Master=True)
